<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.account.AccountFragment"
    android:background="@color/background_app">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:src="@drawable/default_pfp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:text="@string/account" />
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="2dp"
            app:dividerColor="@color/divider"/>
        <com.google.android.material.textfield.TextInputLayout
            style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/e_mail"
            app:boxBackgroundColor="@color/background_text"
            android:textColorHint="@color/color_text"
            app:hintTextColor="@color/accent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="@color/accent"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/color_text"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_text"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/color_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/username"
            app:boxBackgroundColor="@color/background_text"
            android:textColorHint="@color/color_text"
            app:hintTextColor="@color/accent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="@color/accent"
            app:startIconDrawable="@drawable/ic_username"
            app:startIconTint="@color/color_text"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_text"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textCursorDrawable="@drawable/color_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/background_text"
            android:textColorHint="@color/color_text"
            app:hintTextColor="@color/accent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="@color/accent"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/color_text"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/color_text"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_text"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/color_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/phone"
            app:boxBackgroundColor="@color/background_text"
            android:textColorHint="@color/color_text"
            app:hintTextColor="@color/accent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="@color/accent"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@color/color_text"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_text"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textCursorDrawable="@drawable/color_cursor"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/accent"
                android:text="@string/save"
                android:textColor="@color/button_text"
                android:textStyle="bold"
                app:cornerRadius="7dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/background_app"
                android:text="@string/log_out"
                android:textColor="@color/text_background"
                app:cornerRadius="7dp"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>