<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".ui.view.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:src="@drawable/default_pfp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/welcome_sara"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            app:dividerColor="@color/divider" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:boxBackgroundColor="@color/background_text"
            android:layout_marginTop="10dp"
            android:hint="@string/where"
            app:endIconTint="@color/color_text"
            app:boxStrokeWidth="0dp"
            android:textColorHint="@color/color_text"
            app:hintTextColor="@color/color_text"
            app:boxStrokeColor="@color/color_text"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">
            <AutoCompleteTextView
                android:id="@+id/tvAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_text"
                android:textSize="16sp"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/people"
            app:boxBackgroundColor="@color/background_text"
            android:textColorHint="@color/color_text"
            app:hintTextColor="@color/color_text"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="@color/color_text"
            app:startIconTint="@color/color_text"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPeople"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_text"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textCursorDrawable="@drawable/color_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/check_in"
            app:boxBackgroundColor="@color/background_text"
            android:textColorHint="@color/color_text"
            app:hintTextColor="@color/color_text"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="@color/color_text"
            app:startIconTint="@color/color_text"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconTint="@color/color_text"
            app:helperText="dd/mm/yyyy hh:mm:ss*"
            app:helperTextTextColor="@color/red"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCheckIn"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_text"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:textCursorDrawable="@drawable/color_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/check_out"
            app:boxBackgroundColor="@color/background_text"
            android:textColorHint="@color/color_text"
            app:hintTextColor="@color/color_text"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="@color/color_text"
            app:startIconTint="@color/color_text"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconTint="@color/color_text"
            app:helperText="dd/mm/yyyy hh:mm:ss*"
            app:helperTextTextColor="@color/red"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCheckOut"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_text"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:textCursorDrawable="@drawable/color_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/budget"
            app:boxBackgroundColor="@color/background_text"
            android:textColorHint="@color/color_text"
            app:hintTextColor="@color/color_text"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="@color/color_text"
            app:startIconTint="@color/color_text"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBudget"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_text"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textCursorDrawable="@drawable/color_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLookUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/accent"
            android:text="@string/look_up"
            android:textColor="@color/button_text"
            android:textStyle="bold"
            app:cornerRadius="7dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>